HW4/E-1.5.3-AverageStd/wdir_msg/compile.err

AverageStd.java:8: error: cannot find symbol
        ArrayList<Double> input = new ArrayList<Double>();
        ^
  symbol:   class ArrayList
  location: class AverageStd
AverageStd.java:8: error: cannot find symbol
        ArrayList<Double> input = new ArrayList<Double>();
                                      ^
  symbol:   class ArrayList
  location: class AverageStd
2 errors


